# rag-tools-library

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_and_deploy.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: documentation.yaml  documentation.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/brdata_rag_tools/: databases.py  datastructures.py  embeddings.py  main.py  models.py
test/: test_databases.py  test_pgvector.py
