[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brdata-rag-tools"
version = "0.0.6"
authors = [
    { name = "Marco Lehner", email = "marco.lehner@br.de" },
]

description = "Improve development of retrieval augmented generation (RAG) applications at the BR AI + Automation Lab."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "alabaster==0.7.13",
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "Babel==2.13.1",
    "build==1.0.3",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "cryptography==41.0.7",
    "distro==1.8.0",
    "docutils==0.20.1",
    "exceptiongroup==1.2.0",
    "faiss-cpu==1.7.4",
    "greenlet==3.0.1",
    "h11==0.14.0",
    "httpcore==1.0.2",
    "httpx==0.25.2",
    "idna==3.6",
    "imagesize==1.4.1",
    "importlib-metadata==7.0.0",
    "iniconfig==2.0.0",
    "jaraco.classes==3.3.0",
    "jeepney==0.8.0",
    "Jinja2==3.1.2",
    "keyring==24.3.0",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "mdurl==0.1.2",
    "more-itertools==10.1.0",
    "nh3==0.2.14",
    "numpy==1.26.2",
    "openai==1.3.6",
    "packaging==23.2",
    "pgvector==0.2.4",
    "pkginfo==1.9.6",
    "pluggy==1.3.0",
    "psycopg2-binary==2.9.9",
    "pycparser==2.21",
    "pydantic==2.5.2",
    "pydantic_core==2.14.5",
    "Pygments==2.17.2",
    "pyproject_hooks==1.0.0",
    "pytest==7.4.3",
    "readme-renderer==42.0",
    "regex==2023.10.3",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.7.0",
    "SecretStorage==3.3.3",
    "sniffio==1.3.0",
    "snowballstemmer==2.2.0",
    "Sphinx==7.2.6",
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-applehelp==1.0.7",
    "sphinxcontrib-devhelp==1.0.5",
    "sphinxcontrib-htmlhelp==2.0.4",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.6",
    "sphinxcontrib-serializinghtml==1.1.9",
    "SQLAlchemy==2.0.23",
    "tiktoken==0.5.2",
    "tomli==2.0.1",
    "tqdm==4.66.1",
    "twine==4.0.2",
    "typing_extensions==4.8.0",
    "urllib3==2.1.0",
    "zipp==3.17.0"
]

[project.urls]
Homepage = "https://github.com/br-data/rag-tools-library"
Issues = "https://github.com/br-data/rag-tools-library/issues"
