[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brdata-rag-tools"
version = "0.1.4.3"
authors = [
    { name = "Marco Lehner", email = "marco.lehner@br.de" },
]

description = "Improve development of retrieval augmented generation (RAG) applications at the BR AI + Automation Lab."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aenum==3.1.15",
    "annotated-types==0.6.0",
    "anyio==4.2.0",
    "certifi==2023.11.17",
    "chromadb==0.4.17",
    "charset-normalizer==3.3.2",
    "distro==1.9.0",
    "exceptiongroup==1.2.0",
    "faiss-cpu==1.7.4",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.2",
    "httpx==0.26.0",
    "idna==3.6",
    "numpy==1.26.3",
    "openai==1.7.0",
    "pgvector==0.2.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic_core==2.14.6",
    "regex==2023.12.25",
    "requests==2.31.0",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.25",
    "tiktoken==0.5.2",
    "tqdm==4.66.1",
    "typing_extensions==4.9.0",
    "urllib3==2.1.0"
]

[project.urls]
Homepage = "https://github.com/br-data/rag-tools-library"
Issues = "https://github.com/br-data/rag-tools-library/issues"
